--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h1>Conflicts</h1>
+          <h1>Netkills</h1>
 
           <iframe
             width="560"
