--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
-  <body>
+  <body style= "background-color: black">
     <!--[if IE]>
       <p class="browserupgrade">
         You are using an <strong>outdated</strong> browser. Please
@@ -28,6 +28,7 @@
       <div class="row">
         <div class="col-12">
           <h1>Netkills</h1>
+            
 
           <iframe
             width="560"
@@ -38,13 +39,8 @@
             allowfullscreen
           ></iframe>
           <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Tired of being still awake at 3a.m. in the morning with your display on? <br> Tired of having your eyes swollen from the blue lights of the screen? <br> More directly: is Netflix ruining your life? <br> Get out of the loop! <br> Use <strong>Netkills</strong>, the extention that will lead you to awareness. <br><br> Netkills it's a Netflix extention created by Micol Ganzerli, Filippo Marani and Ginevra Scipioni, <br> during the IU course at ISIA Urbino (Italy, 2019).<br> We decided to analyse the Netflix platform and the mechanism with which users interact. <br> We noticed that this platform, like some others do, has the aim to keep users tied to its interface. <br>Once we took notice of this situation, we decided to analyse the components that allowed this problem to occur: <br>buttons, colors, text and lots of other elements.<br>
+            After this study, we modified this variables to make a safer and healthier version of Netflix, that kills the loop <br>and some others factors that keep you in it. You can still watch Netflix... but we hope you'll be encouraged in getting out! <br> No more all-nighters, with Netkills! 
           </p>
           <a role="button" class="btn btn-primary btn-lg" href="/">download</a>
         </div>
