--- a/index.html
+++ b/index.html
@@ -31,18 +31,17 @@
             
 
           <iframe
-            width="560"
-            height="315"
+            width="1120"
+            height="630"
             src="https://www.youtube.com/embed/CNzfE7yivSU"
             frameborder="0"
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-          <p class="description">
-            Tired of being still awake at 3a.m. in the morning with your display on? <br> Tired of having your eyes swollen from the blue lights of the screen? <br> More directly: is Netflix ruining your life? <br> Get out of the loop! <br> Use <strong>Netkills</strong>, the extention that will lead you to awareness. <br><br> Netkills it's a Netflix extention created by Micol Ganzerli, Filippo Marani and Ginevra Scipioni, <br> during the IU course at ISIA Urbino (Italy, 2019).<br> We decided to analyse the Netflix platform and the mechanism with which users interact. <br> We noticed that this platform, like some others do, has the aim to keep users tied to its interface. <br>Once we took notice of this situation, we decided to analyse the components that allowed this problem to occur: <br>buttons, colors, text and lots of other elements.<br>
-            After this study, we modified this variables to make a safer and healthier version of Netflix, that kills the loop <br>and some others factors that keep you in it. You can still watch Netflix... but we hope you'll be encouraged in getting out! <br> No more all-nighters, with Netkills! 
-          </p>
-          <a role="button" class="btn btn-primary btn-lg" href="/">download</a>
+          <p class= "col-8">
+            Tired of being still awake at 3a.m. in the morning with your display on? <br> Tired of having your eyes swollen from the blue lights of the screen? <br> More directly: is Netflix ruining your life? <br> Get out of the loop! <br> Use <strong>Netkills</strong>, the extention that will lead you to awareness. <br><br> Netkills it's a Netflix extention created by Micol Ganzerli, Filippo Marani and Ginevra Scipioni, during the IU course at ISIA Urbino (Italy, 2019).<br> We decided to analyse the Netflix platform and the mechanism with which users interact. We noticed that this platform, like some others do, has the aim to keep users tied to its interface. Once we took notice of this situation, we decided to analyse the components that allowed this problem to occur: buttons, colors, text and lots of other elements.After this study, we modified this variables to make a safer and healthier version of Netflix, that kills the loop and some others factors that keep you in it. You can still watch Netflix... but we hope you'll be encouraged in getting out! <br> No more all-nighters, with Netkills!
+          </p> 
+          <a role="button" class="btn btn-danger btn-lg" href="netkills-1.0-fx.xpi">download</a>
         </div>
       </div>
     </div>
